Network/Ingress/templates/ArgoCDIngress.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: argocd
  namespace: argocd
  
  labels:
    wan-mode: public
    lan-mode: private

spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
      namespace: kuadrant-core-prod

  rules:
    - backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: argocd-server
          port: 80
